--- a/glide.yaml
+++ b/glide.yaml
@@ -10,7 +10,10 @@ import:
 - package: github.com/choria-io/mcorpc-agent-provider
   subpackages:
   - mcorpc
+  - mcorpc/client
 - package: github.com/sirupsen/logrus
+- package: gopkg.in/alecthomas/kingpin.v2
+  version: ^2.2.6
 testImport:
 - package: github.com/golang/mock
   version: 8b2eeeb0ca5f56c78bec5efde9c4a21d9201126c
