(#5) small code reorg and more stats

--- a/packager/templates/el/global/choria-provisioner.yaml
+++ b/packager/templates/el/global/choria-provisioner.yaml
@@ -7,7 +7,7 @@ logfile: "/var/log/{{cpkg_name}}.log"
 loglevel: info
 helper: /etc/choria-provisioner/helper
 token: toomanysecrets
-tls: false
+choria_insecure: true
 site: TEST
 monitor_port: 8080
 
