(#21) fix various startup issues in the init system

--- a/packager/buildspec.yaml
+++ b/packager/buildspec.yaml
@@ -6,6 +6,8 @@ foss:
   compile_targets:
     defaults:
       output: choria-provisioner-{{version}}-{{os}}-{{arch}}
+      pre:
+        - go generate
 
     64bit_linux:
       os: linux
