--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
 package: github.com/choria-io/provisioning-agent
 import:
 - package: github.com/choria-io/go-choria
+  version: ^0.5.1
   subpackages:
   - build
   - choria
@@ -8,6 +9,7 @@ import:
   - server
   - server/agents
 - package: github.com/choria-io/mcorpc-agent-provider
+  version: ^0.2.0
   subpackages:
   - mcorpc
   - mcorpc/client
