--- a/packager/templates/el/el7/choria-provisioner.service
+++ b/packager/templates/el/el7/choria-provisioner.service
@@ -7,7 +7,7 @@ StandardOutput=syslog
 StandardError=syslog
 User=root
 Group=root
-ExecStart={{cpkg_bindir}}/{{cpkg_name}} run --config={{cpkg_etcdir}}/{{cpkg_name}}.yaml
+ExecStart={{cpkg_bindir}}/{{cpkg_name}} run --choria-config {{cpkg_etcdir}}/choria.cfg --config={{cpkg_etcdir}}/{{cpkg_name}}.yaml
 
 [Install]
 WantedBy=multi-user.target
