--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/choria-io/provisioning-agent
 import:
 - package: github.com/choria-io/go-choria
-  version: 712b4538dbe96c66d118dca98221fb9ef14e054e
+  version: aac81e5094aafb2c90a9d945508a38483a20da7a
   subpackages:
   - build
   - choria
@@ -9,7 +9,7 @@ import:
   - server
   - server/agents
 - package: github.com/choria-io/mcorpc-agent-provider
-  version: 279845170e27ad55f55a3ced2c442eb91ad5334d
+  version: 0.3.3
   subpackages:
   - mcorpc
   - mcorpc/client
@@ -17,12 +17,12 @@ import:
 - package: gopkg.in/alecthomas/kingpin.v2
   version: ^2.2.6
 - package: github.com/choria-io/go-backplane
-  version: ^1.0.0
+  version: aaa2d58c3d497703b5799bafab67e154a85c5018
   subpackages:
   - backplane
 - package: github.com/tidwall/gjson
 - package: github.com/choria-io/go-lifecycle
-  version: 1170dd4e29c13116122415e7140e1a092d6a966b
+  version: 1.0.1
 - package: github.com/choria-io/go-updater
   version: dd12ee5118471007909aac6dbe8c4374b6907e5d
 testImport:
