(misc) use main branch
Signed-off-by: R.I.Pienaar <rip@devco.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - test
       - build_el7_64bit_rpms:
