(#138) Support sending a key to choria
Signed-off-by: R.I.Pienaar <rip@devco.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
       REPO: nightly
 
     docker:
-      - image: circleci/ruby
+      - image: circleci/ruby:2.7
 
     steps:
       - attach_workspace:
