(misc) update to ginkgo v2
Signed-off-by: R.I.Pienaar <rip@devco.net>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Lint and Test
         uses: choria-io/actions/lint_and_test/go@main
         with:
-          ginkgo: "yes"
+          ginkgo: "v2"
