--- a/docs/themes/hugo-theme-relearn/theme.toml
+++ b/docs/themes/hugo-theme-relearn/theme.toml
@@ -5,13 +5,14 @@ description = "A theme for Hugo designed for documentation"
 homepage = "https://github.com/McShelby/hugo-theme-relearn"
 demosite = "https://mcshelby.github.io/hugo-theme-relearn"
 tags = ["dark", "docs", "light", "multilingual", "responsive"]
-features = ["breadcrumbs", "boxes", "buttons",
+features = ["badges", "breadcrumbs", "boxes", "buttons",
   "chemical formulae", "customizable", "color variants",
   "dark", "docs", "documentation",
   "expand",
   "favicon", "file inclusion", "file system support", "font awesome",
+  "gfm",
   "hidden pages",
-  "i18n", "ie11", "image resizing", "include", "internet explorer",
+  "i18n", "icons", "ie11", "image resizing", "include", "internet explorer",
   "light", "lightbox", "logo",
   "math", "mathjax", "menu", "mermaid", "multilingual", "mobile",
   "nested sections", "notice",
